fix spacing

--- a/Frontend/data-submission-page/style.css
+++ b/Frontend/data-submission-page/style.css
@@ -125,7 +125,7 @@ h1{
 
 .blue-section-2{
   margin-top:0;
-  padding-top:15px;
+  padding-top:5px;
 }
 
 .blue-inner{
